# GLoSS-rt

./: .gitignore  .pypirc.template  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  run-gloss-with-conda.sh  setup.py
.github/workflows/: build-and-test.yml
antenna_topology/: videotron copy.csv  videotron.csv
include/: gloss.hpp  utils.hpp
scripts/: view_tiff.py
src/: azimuth_and_sec.cpp  bindings.cpp  elevation.cpp  gloss.cpp  gridpaths.cpp  utils.cpp
src/classes/: antennas.cpp  read_tiff.cpp
src/utils/: csvfile.cpp  csvfile.h
tests/: test_pybindings.py
